tests/cases/errors/packed_struct_decl/main.sv
module Top;
  struct packed { logic [3:0] a; logic [3:0] b; } s;
endmodule
